Guard closed windows against move and resize operations

A closed window cannot react to new geometry, also requesting new
geometry can involve accessing resources that are gone/deleted now.

Scripts trying to move or resize a closed window is a bug though.

BUG: 492213